@@ -1,10 +1,13 @@
 package iuh.fit.service.search;
 
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
 
+import iuh.fit.enums.FriendshipStatus;
+import iuh.fit.repository.*;
 import org.springframework.boot.context.event.ApplicationReadyEvent;
 import org.springframework.context.event.EventListener;
 import org.springframework.data.domain.Page;
@@ -31,11 +34,6 @@ import iuh.fit.entity.Message;
 import iuh.fit.entity.SearchHistory;
 import iuh.fit.entity.UserAuth;
 import iuh.fit.entity.UserDetail;
-import iuh.fit.repository.MessageBucketRepository;
-import iuh.fit.repository.MessageRepository;
-import iuh.fit.repository.SearchHistoryRepository;
-import iuh.fit.repository.UserAuthRepository;
-import iuh.fit.repository.UserDetailRepository;
 import iuh.fit.repository.elasticsearch.DocumentSearchRepository;
 import iuh.fit.repository.elasticsearch.MessageSearchRepository;
 import iuh.fit.entity.MessageBucket;
@@ -55,6 +53,7 @@ public class SearchService {
     private final UserDetailRepository userDetailRepository;
     private final UserAuthRepository userAuthRepository;
     private final SearchHistoryRepository searchHistoryRepository;
+    private final FriendshipRepository friendshipRepository;
     private final ElasticsearchOperations elasticsearchOperations;
 
     // ── Circuit breaker state ─────────────────────────────────────────────────
@@ -306,10 +305,12 @@ public class SearchService {
 
     // ── Search users (with highlighting + edge_ngram phone) ───────────────────
 
-    public Page<SearchResult<UserDocument>> searchUsers(String query, int page, int size) {
+    public Page<SearchResult<UserDocument>> searchUsers(String query, String currentUserId, int page, int size) {
         Pageable pageable = PageRequest.of(page, size);
+        List<SearchResult<UserDocument>> results = new ArrayList<>();
+        long totalElements = 0;
 
-        // Try Elasticsearch first
+        // 1. Thử lấy từ Elasticsearch trước
         if (isElasticsearchAvailable()) {
             try {
                 Highlight highlight = new Highlight(List.of(
@@ -319,30 +320,26 @@ public class SearchService {
                         new HighlightField("email")));
 
                 NativeQuery nativeQuery = NativeQuery.builder()
-                        .withQuery(q -> q
-                                .bool(b -> b
-                                        .should(s -> s
-                                                .match(m -> m.field("displayName").query(query).fuzziness("AUTO")))
-                                        .should(s -> s
-                                                .match(m -> m.field("firstName").query(query).fuzziness("AUTO")))
-                                        .should(s -> s
-                                                .match(m -> m.field("lastName").query(query).fuzziness("AUTO")))
-                                        .should(s -> s.match(m -> m.field("email").query(query).fuzziness("AUTO")))
-                                        .minimumShouldMatch("1")))
+                        .withQuery(q -> q.bool(b -> b
+                                .should(s -> s.match(m -> m.field("displayName").query(query).fuzziness("AUTO")))
+                                .should(s -> s.match(m -> m.field("firstName").query(query).fuzziness("AUTO")))
+                                .should(s -> s.match(m -> m.field("lastName").query(query).fuzziness("AUTO")))
+                                .should(s -> s.match(m -> m.field("email").query(query).fuzziness("AUTO")))
+                                .minimumShouldMatch("1")))
                         .withHighlightQuery(new HighlightQuery(highlight, UserDocument.class))
                         .withPageable(pageable)
                         .build();
 
                 SearchHits<UserDocument> searchHits = elasticsearchOperations.search(nativeQuery, UserDocument.class);
+                totalElements = searchHits.getTotalHits();
 
-                if (searchHits.getTotalHits() > 0) {
-                    List<SearchResult<UserDocument>> results = searchHits.getSearchHits().stream()
+                if (totalElements > 0) {
+                    results = searchHits.getSearchHits().stream()
                             .map(hit -> SearchResult.<UserDocument>builder()
                                     .document(hit.getContent())
                                     .highlights(hit.getHighlightFields())
                                     .build())
-                            .toList();
-                    return new PageImpl<>(results, pageable, searchHits.getTotalHits());
+                            .collect(Collectors.toList());
                 }
             } catch (Exception e) {
                 markElasticsearchDown(e);
@@ -350,42 +347,66 @@ public class SearchService {
             }
         }
 
-        // MongoDB fallback — search by displayName, then union with phone/email matches
-        log.debug("searchUsers MongoDB fallback for query='{}'", query);
-        String escapedQuery = java.util.regex.Pattern.quote(query);
+        // 2. MongoDB fallback nếu ES không có kết quả
+        if (results.isEmpty()) {
+            String escapedQuery = java.util.regex.Pattern.quote(query);
+            Page<UserDetail> byName = userDetailRepository.searchByDisplayName(escapedQuery, pageable);
+            java.util.LinkedHashMap<String, UserDetail> userMap = new java.util.LinkedHashMap<>();
+            byName.getContent().forEach(u -> userMap.put(u.getUserId(), u));
 
-        // Search by displayName
-        Page<UserDetail> byName = userDetailRepository.searchByDisplayName(escapedQuery, pageable);
-        java.util.LinkedHashMap<String, UserDetail> userMap = new java.util.LinkedHashMap<>();
-        byName.getContent().forEach(u -> userMap.put(u.getUserId(), u));
-
-        // Search by email — collect user IDs and fetch UserDetail
-        List<UserAuth> byEmail = userAuthRepository.searchByEmail(escapedQuery);
-        if (!byEmail.isEmpty()) {
-            List<String> extraIds = byEmail.stream()
-                    .map(UserAuth::getUserId)
-                    .filter(id -> !userMap.containsKey(id))
-                    .toList();
-            if (!extraIds.isEmpty()) {
-                userDetailRepository.findByUserIdIn(extraIds).forEach(u -> userMap.put(u.getUserId(), u));
+            List<UserAuth> byEmail = userAuthRepository.searchByEmail(escapedQuery);
+            if (!byEmail.isEmpty()) {
+                List<String> extraIds = byEmail.stream()
+                        .map(UserAuth::getUserId)
+                        .filter(id -> !userMap.containsKey(id))
+                        .toList();
+                if (!extraIds.isEmpty()) {
+                    userDetailRepository.findByUserIdIn(extraIds).forEach(u -> userMap.put(u.getUserId(), u));
+                }
             }
+
+            results = userMap.values().stream()
+                    .limit(size)
+                    .map(user -> {
+                        UserAuth auth = userAuthRepository.findById(user.getUserId()).orElse(null);
+                        UserDocument doc = UserDocument.builder()
+                                .userId(user.getUserId())
+                                .displayName(user.getDisplayName())
+                                .email(auth != null ? auth.getEmail() : null)
+                                .avatarUrl(user.getAvatarUrl())
+                                .build();
+                        return SearchResult.<UserDocument>builder().document(doc).build();
+                    })
+                    .collect(Collectors.toList());
+            totalElements = results.size();
         }
 
-        List<SearchResult<UserDocument>> results = userMap.values().stream()
-                .limit(size)
-                .map(user -> {
-                    UserAuth auth = userAuthRepository.findById(user.getUserId()).orElse(null);
-                    UserDocument doc = UserDocument.builder()
-                            .userId(user.getUserId())
-                            .displayName(user.getDisplayName())
-                            .email(auth != null ? auth.getEmail() : null)
-                            .avatarUrl(user.getAvatarUrl())
-                            .build();
-                    return SearchResult.<UserDocument>builder().document(doc).build();
-                })
-                .toList();
+        // 3. GÁN TRẠNG THÁI QUAN HỆ (Dù dữ liệu từ nguồn nào cũng chạy qua đây)
+        if (currentUserId != null && !results.isEmpty()) {
+            results.forEach(rs -> {
+                String targetUserId = rs.getDocument().getUserId();
+                rs.setFriendshipStatus(determineFriendshipStatus(currentUserId, targetUserId));
+            });
+        }
 
-        return new PageImpl<>(results, pageable, results.size());
+        return new PageImpl<>(results, pageable, totalElements);
+    }
+
+    private String determineFriendshipStatus(String currentUserId, String targetUserId) {
+        if (currentUserId.equals(targetUserId)) return "SELF";
+
+        // Tìm kiếm quan hệ không phân biệt ai là người gửi, ai là người nhận
+        return friendshipRepository.findByRequesterIdAndReceiverId(currentUserId, targetUserId)
+                .or(() -> friendshipRepository.findByRequesterIdAndReceiverId(targetUserId, currentUserId))
+                .map(f -> {
+                    if (f.getStatus() == FriendshipStatus.ACCEPTED) return "FRIEND";
+                    if (f.getStatus() == FriendshipStatus.PENDING) {
+                        // Nếu requesterId là mình -> Mình đã gửi (SENT)
+                        // Nếu không phải mình (tức mình là receiver) -> Mình nhận được (RECEIVED)
+                        return f.getRequesterId().equals(currentUserId) ? "PENDING_SENT" : "PENDING_RECEIVED";
+                    }
+                    return "NONE";
+                }).orElse("NONE");
     }
 
     // ── Auto-reindex on startup ───────────────────────────────────────────────
@@ -604,7 +625,7 @@ public class SearchService {
                 ? searchMessagesByUserId(query, conversationIds, page, size)
                 : Page.empty();
 
-        Page<SearchResult<UserDocument>> users = searchUsers(query, page, size);
+        Page<SearchResult<UserDocument>> users = searchUsers(query, userId, page, size);
 
         Page<SearchResult<DocumentDocument>> documents = searchDocuments(query, userId, page, size);
 
@@ -675,19 +696,34 @@ public class SearchService {
 
     // ── Search history tracking ───────────────────────────────────────────────
 
+//    @Async
+//    public void trackSearch(String userId, String query, String searchType, String conversationId, int resultCount) {
+//        try {
+//            searchHistoryRepository.save(SearchHistory.builder()
+//                    .userId(userId)
+//                    .query(query)
+//                    .searchType(searchType)
+//                    .conversationId(conversationId)
+//                    .resultCount(resultCount)
+//                    .build());
+//        } catch (Exception e) {
+//            log.warn("Failed to track search history: {}", e.getMessage());
+//        }
+//    }
+
     @Async
-    public void trackSearch(String userId, String query, String searchType, String conversationId, int resultCount) {
-        try {
-            searchHistoryRepository.save(SearchHistory.builder()
-                    .userId(userId)
-                    .query(query)
-                    .searchType(searchType)
-                    .conversationId(conversationId)
-                    .resultCount(resultCount)
-                    .build());
-        } catch (Exception e) {
-            log.warn("Failed to track search history: {}", e.getMessage());
-        }
+    public void trackInteraction(String userId, String targetId, String name, String avatar, String type) {
+        // Nếu đã tồn tại lịch sử với người này, xóa cái cũ để cái mới lên đầu
+        searchHistoryRepository.deleteByUserIdAndTargetId(userId, targetId);
+
+        searchHistoryRepository.save(SearchHistory.builder()
+                .userId(userId)
+                .targetId(targetId)
+                .targetName(name)
+                .targetAvatar(avatar)
+                .targetType(type)
+                .searchedAt(LocalDateTime.now())
+                .build());
     }
 
     public List<SearchHistory> getSearchHistory(String userId, int limit) {
@@ -696,5 +732,45 @@ public class SearchService {
 
     public void clearSearchHistory(String userId) {
         searchHistoryRepository.deleteByUserId(userId);
+    }
+
+    //ĐỒNG BỘ ELASTICSEARCH VỚI VỚI DATABASE
+    @EventListener(ApplicationReadyEvent.class)
+    public void handleContextRefresh() {
+        try {
+            log.info("--- ĐANG BẮT ĐẦU LÀM SẠCH VÀ ĐỒNG BỘ LẠI ELASTICSEARCH ---");
+
+            // Bước 1: Xóa toàn bộ Index cũ (Để xóa sạch các ID "ma" không tồn tại trong Mongo)
+            var indexOps = elasticsearchOperations.indexOps(UserDocument.class);
+            indexOps.delete();
+            indexOps.create();
+
+            // Bước 2: Nạp lại toàn bộ dữ liệu chuẩn từ MongoDB
+            List<UserDetail> users = userDetailRepository.findAll();
+            users.forEach(this::syncUserToElasticsearch);
+
+            log.info("--- ĐÃ ĐỒNG BỘ THÀNH CÔNG {} NGƯỜI DÙNG ---", users.size());
+        } catch (Exception e) {
+            log.error("Lỗi khi tự động reindex: {}", e.getMessage());
+        }
+    }
+
+    public void syncUserToElasticsearch(UserDetail user) {
+        try {
+            // Lấy thông tin email từ UserAuth vì UserDetail không chứa email
+            UserAuth auth = userAuthRepository.findById(user.getUserId()).orElse(null);
+
+            UserDocument doc = UserDocument.builder()
+                    .userId(user.getUserId()) // ID phải khớp để không bị "User ma"
+                    .displayName(user.getDisplayName())
+                    .avatarUrl(user.getAvatarUrl())
+                    .email(auth != null ? auth.getEmail() : null)
+                    .build();
+
+            elasticsearchOperations.save(doc); // Lưu vào Elasticsearch
+            log.info("Đã đồng bộ User lên ES: {}", user.getDisplayName());
+        } catch (Exception e) {
+            log.error("Lỗi đồng bộ User {}: {}", user.getUserId(), e.getMessage());
+        }
     }
 }
